src/ui/snapshots/coxtop__ui__confirm_dialog__tests__renders_a_long_command_in_the_harbor_light_theme.snap
---
source: src/ui/confirm_dialog.rs
assertion_line: 218
expression: "draw(ThemeId::HarborLight, LONG)"
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"          ┌Land──────────────────────────────────────────────────────┐          "
"          │ $ cox land coxtop-runs-actions-as-cox-commands-after-a-c │          "
"          │   oxtop-actions-confirm-dialog --branch p3-widgets --no- │          "
"          │   ff --message 'ship it'                                 │          "
"          │                                                          │          "
"          │ y run    n cancel                                        │          "
"          └──────────────────────────────────────────────────────────┘          "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
