src/ui/snapshots/coxtop__ui__confirm_dialog__tests__renders_a_short_command_in_the_regatta_theme.snap
---
source: src/ui/confirm_dialog.rs
assertion_line: 203
expression: "draw(ThemeId::Regatta, SHORT)"
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"          ┌Land──────────────────────────────────────────────────────┐          "
"          │ $ cox land t-1                                           │          "
"          │                                                          │          "
"          │ y run    n cancel                                        │          "
"          └──────────────────────────────────────────────────────────┘          "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
